Revision history for Perl extension Apache::Dir.

0.06

0.05 2008-05-05T03:39:28
     - Added the "configure_requires", "build_requires", and "recommends"
       parameters to Build.PL.
     - Rejiggered the POD test to take advantage of Test::Pod 1.20 or later.
     - Eliminated test dependency on Apache::FakeRequest, and so was able
       to move mod_perl from the "requires" parameter to "recommends" in
       Build.PL.

0.04  2005-09-04T22:10:36
      - Switched to manually defining constants so as to support compatibility
        with mod_perl 2.
      - Eleminated "Subroutine Apache::FakeRequest::header_out redefined"
        warning in tests.

0.03  2004-05-18T23:54:20
      - Updated README to reflect use if Apache::Dir as a Fixup Handler.

0.02  2004-05-18T23:43:39
      - Switched from stat'ing a directory to just checking the content type
        for DIR_MAGIC_TYPE. Suggested by Geoffrey Young.
      - Documentation now suggests using Apache::Dir as a fixup handler.
      - Now requiring mod_perl in Build.PL.
      - Added simple tests using Apache::FakeRequest.
      - Released to CPAN, with thanks to Doug McEachern for assigning the
        namespace to me.

0.01  2004-05-11T12:23:04
      - Initial release, mail list only.